# clams

./: .gitmodules  CMakeLists.txt  Clams.sublime-project.in  ctags_builder.bat
clams/: cam_calib.cc  cam_calib.h  discrete_depth_distortion_model.cc  discrete_depth_distortion_model.h  discrete_depth_distortion_model_helpers.cc  draw_helpers.h  eigen_util.h  frame_projector.cc  frame_projector.h  plane_util.h  pose_optimization.h  slam_calibration_visualizer.cc  slam_calibration_visualizer.h  slam_calibrator.cc  slam_calibrator.h  slam_map.cc  slam_map.h  trajectory.cc  trajectory.h  trajectory_visualizer.cc  trajectory_visualizer.h
clams/common/: clams_defer.h  clams_macros.h  lockable.cc  lockable.h  timer.cc  timer.h  typedefs.h
clams/io/: common_x3d.h  frame_x3d.h  pointcloud_x3d.h  slam_x3d.h
clams/serialization/: common.cc  common.h  opencv.h  serialization.h
cmake/: FindOpenNI2.cmake
data/xtion-pro-live/: camera.txt
doc/: calib.pptx
prog/: calibrate.cc  convert_trajectory.cc  exp_rgbd.cc  exp_slammap.cc  generate_map.cc  generate_slammap.cc  inspect.cc  undistort.cc  visualize_model.cc  visualize_trajectory.cc
scripts/: run_cmd.sh  run_cmdline.sh  runcmd.sh
stream_sequence/: frame_projector.cc  frame_projector.h  pcl_typedefs.h  stream_sequence.cc  stream_sequence.h  stream_sequence_base.cc  stream_sequence_base.h  typedefs.h
tools/: gen_pattern.py
